--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,8 +4,12 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
 		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-  <display-name>Archetype Created Web Application</display-name>
-  <!-- Jersey Related Configuration -->
+         <!--  This line is also commented
+  		<display-name>Advance Jersey</display-name>
+  		-->
+  <!-- Jersey Related Configuration 
+  		This is commented as its work is done by class com.sandesh.rest.jersey.config.JerseyApplication
+  		Remove or unannotate that class and uncommenting this block of code will work fine
   <servlet>
     <servlet-name>Jersey Web Application</servlet-name>
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
@@ -18,21 +22,24 @@
 	    <servlet-name>Jersey Web Application</servlet-name>
 	    <url-pattern>/webapi/*</url-pattern>
 	</servlet-mapping>
+	-->
 	
 	
-	
-	<!-- Spring Related Configuration -->
+	<!-- Spring Related Configuration
+			This is commented as its work is done by class com.sandesh.rest.spring.config.SpringConfig and WebServletConfiguration class
+  			Remove or unannotate that class and uncommenting this block of code will work fine
 	<servlet>
         <servlet-name>spring-mvc</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/applicationContext.xml</param-value>
-    </init-param>
+	        <param-name>contextConfigLocation</param-name>
+	        <param-value>/WEB-INF/applicationContext.xml</param-value>
+    	</init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
         <servlet-name>spring-mvc</servlet-name>
         <url-pattern>/spring/*</url-pattern>
     </servlet-mapping>
+     -->
 </web-app>
